Fixed translation word wrapping.

--- a/client/src/components/translation-selector/word-scroll-list.scss
+++ b/client/src/components/translation-selector/word-scroll-list.scss
@@ -15,6 +15,7 @@ ul {
   position: relative;
   bottom: 0;
   list-style-type: none;
+  white-space: nowrap;
 
   li {
     margin: 0 10px;
